--- a/app/src/main/res/navigation/my_nav_graph.xml
+++ b/app/src/main/res/navigation/my_nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.wordle.fragment.view.HomeFragment"
+        android:name="com.example.wordle_1A2B.fragment.view.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
         <action
@@ -16,6 +16,6 @@
     </fragment>
     <fragment
         android:id="@+id/detailFragment2"
-        android:name="com.example.wordle.fragment.view.DetailFragment"
+        android:name="com.example.wordle_1A2B.fragment.view.DetailFragment"
         android:label="DetailFragment" />
 </navigation>
