feat: add homepage & remove old data
- 新增遊戲首頁
- 移除救專案資料

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -8,7 +8,7 @@
     android:clickable="true"
     android:focusable="true"
     app:defaultNavHost="true"
-    android:background="@color/white"
+    android:background="@color/white_FFFFFF"
     tools:context=".fragment.view.HomeFragment"
     tools:ignore="SpeakableTextPresentCheck">
 
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="探索"
-            android:textColor="@color/black"
+            android:textColor="@color/black_000000"
             android:textSize="18dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/view6"
@@ -96,7 +96,7 @@
                 android:shadowRadius="1"
                 android:singleLine="true"
                 android:text="台北奧萬大"
-                android:textColor="@color/white"
+                android:textColor="@color/white_FFFFFF"
                 android:textSize="24dp"
                 app:layout_constraintBottom_toBottomOf="@+id/imgPicture"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -492,7 +492,7 @@
         android:id="@+id/clLandscape"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/black"
+        android:background="@color/black_000000"
         android:translationZ="10dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -518,7 +518,7 @@
                 android:layout_marginBottom="12dp"
                 android:gravity="center"
                 android:text="景觀圖"
-                android:textColor="@color/black"
+                android:textColor="@color/black_000000"
                 android:textSize="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
