--- a/app/src/main/res/layout/item_picture_big.xml
+++ b/app/src/main/res/layout/item_picture_big.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black">
+    android:background="@color/black_000000">
 
     <ImageView
         android:id="@+id/imgPicture"
