--- a/app/src/main/res/navigation/my_nav_graph.xml
+++ b/app/src/main/res/navigation/my_nav_graph.xml
@@ -3,19 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/my_nav_graph"
-    app:startDestination="@id/homeFragment">
-
+    app:startDestination="@id/homePageFragment">
     <fragment
-        android:id="@+id/homeFragment"
-        android:name="com.example.wordle_1A2B.fragment.view.HomeFragment"
-        android:label="fragment_home"
-        tools:layout="@layout/fragment_home" >
-        <action
-            android:id="@+id/action_homeFragment_to_detailFragment2"
-            app:destination="@id/detailFragment2" />
-    </fragment>
-    <fragment
-        android:id="@+id/detailFragment2"
-        android:name="com.example.wordle_1A2B.fragment.view.DetailFragment"
-        android:label="DetailFragment" />
+        android:id="@+id/homePageFragment"
+        android:name="com.example.wordle_1A2B.fragment.view.HomePageFragment"
+        android:label="HomePageFragment" />
 </navigation>
