feat: build app common structure
- 整理專案架構
- 新建 Base 繼承

--- a/app/src/main/res/navigation/my_nav_graph.xml
+++ b/app/src/main/res/navigation/my_nav_graph.xml
@@ -6,6 +6,6 @@
     app:startDestination="@id/homePageFragment">
     <fragment
         android:id="@+id/homePageFragment"
-        android:name="com.example.wordle_1A2B.fragment.view.HomePageFragment"
+        android:name="com.example.wordle_1A2B.ui.component.fragment.homepage.HomePageFragment"
         android:label="HomePageFragment" />
 </navigation>
