--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white_F8F1E9">#F8F1E9</color>
     <color name="white_CCFFFFFF">#CCFFFFFF</color>
     <color name="white_8CFFFFF">#8CFFFFFF</color>
+    <color name="white_F2FFFFF">#F2FFFFFF</color>
 
     <!--  Gray  -->
     <color name="gray_D8D8D8">#D8D8D8</color>
@@ -40,6 +41,8 @@
     <color name="gray_5C5C5C_80">#D85C5C5C</color>
     <color name="gray_3E3A34_80">#D83E3A34</color>
     <color name="gray_7A7A7A">#7A7A7A</color>
+    <color name="gray_3E3A34">#3E3A34</color>
+    <color name="gray_5C5C5C">#5C5C5C</color>
 
     <!--  Black  -->
     <color name="black_000000">#000000</color>
@@ -61,6 +64,8 @@
     <color name="red_FD4C4C">#FD4C4C</color>
     <color name="red_890D0D">#890D0D</color>
     <color name="red_FFAAA4">#FFAAA4</color>
+    <color name="red_A93B48">#A93B48</color>
+    <color name="red_D17A84">#D17A84</color>
 
     <!--  Green  -->
     <color name="green_59D945">#59D945</color>
@@ -70,6 +75,7 @@
     <color name="green_CFF6D9">#CFF6D9</color>
     <color name="green_1CBF47">#1CBF47</color>
     <color name="green_79FF9C">#79FF9C</color>
+    <color name="green_A9CD76">#A9CD76</color>
 
     <!--  Blue  -->
     <color name="blue_4A8FE1">#4A8FE1</color>
@@ -94,6 +100,8 @@
     <color name="blue_EAF7FD">#EAF7FD</color>
     <color name="blue_8CCEFF">#8CCEFF</color>
     <color name="blue_DDF0FF">#DDF0FF</color>
+    <color name="blue_85C9D1">#85C9D1</color>
+    <color name="blue_39ADBA">#39ADBA</color>
 
     <!--  Yellow  -->
     <color name="yellow_FFC23B">#FFC23B</color>
@@ -113,6 +121,7 @@
     <color name="orange_5B5B5B">#5B5B5B</color>
     <color name="orange_FFBB78">#FFBB78</color>
     <color name="orange_E58200">#E58200</color>
+    <color name="orange_D1775D">#D1775D</color>
 
     <!--  turquoise  -->
     <color name="turquoise_C5EFF0">#C5EFF0</color>
