--- a/app/src/main/res/navigation/my_nav_graph.xml
+++ b/app/src/main/res/navigation/my_nav_graph.xml
@@ -14,6 +14,6 @@
     </fragment>
     <fragment
         android:id="@+id/gameFragment"
-        android:name="com.example.wordle_1A2B.ui.component.fragment.Game.GameFragment"
+        android:name="com.example.wordle_1A2B.ui.component.fragment.game.GameFragment"
         android:label="GameFragment" />
 </navigation>
