feat: adjust game layout
- 調整遊戲畫面

--- a/app/src/main/res/layout/item_game.xml
+++ b/app/src/main/res/layout/item_game.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/clItem"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/clItem"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tvAnswer1"
-        android:tag="1"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="6dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/bg_game_answer"
         android:gravity="center"
+        android:tag="1"
         android:textColor="@color/black_000000"
-        android:textSize="14dp"
+        android:textSize="16dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,114 +26,146 @@
 
     <TextView
         android:id="@+id/tvAnswer2"
-        android:tag="2"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="6dp"
         android:background="@drawable/bg_game_answer"
         android:gravity="center"
+        android:tag="2"
         android:textColor="@color/black_000000"
-        android:textSize="14dp"
+        android:textSize="16dp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/tvAnswer1"
         app:layout_constraintTop_toTopOf="@+id/tvAnswer1" />
 
     <TextView
         android:id="@+id/tvAnswer3"
-        android:tag="3"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="6dp"
         android:background="@drawable/bg_game_answer"
         android:gravity="center"
+        android:tag="3"
         android:textColor="@color/black_000000"
-        android:textSize="14dp"
+        android:textSize="16dp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/tvAnswer2"
         app:layout_constraintTop_toTopOf="@+id/tvAnswer2" />
 
     <TextView
         android:id="@+id/tvAnswer4"
-        android:tag="4"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="6dp"
         android:background="@drawable/bg_game_answer"
         android:gravity="center"
+        android:tag="4"
         android:textColor="@color/black_000000"
-        android:textSize="14dp"
+        android:textSize="16dp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/tvAnswer3"
         app:layout_constraintTop_toTopOf="@+id/tvAnswer3" />
+
+    <TextView
+        android:id="@+id/tvAnswer5"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="6dp"
+        android:background="@drawable/bg_game_answer"
+        android:gravity="center"
+        android:tag="4"
+        android:textColor="@color/black_000000"
+        android:textSize="16dp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintStart_toEndOf="@+id/tvAnswer4"
+        app:layout_constraintTop_toTopOf="@+id/tvAnswer3"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/tvAnswer6"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="6dp"
+        android:background="@drawable/bg_game_answer"
+        android:gravity="center"
+        android:tag="4"
+        android:textColor="@color/black_000000"
+        android:textSize="16dp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintStart_toEndOf="@+id/tvAnswer5"
+        app:layout_constraintTop_toTopOf="@+id/tvAnswer3"
+        tools:visibility="visible" />
 
     <View
         android:id="@+id/view7"
         android:layout_width="2dp"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="6dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/gray_7D7D7D"
+        android:background="@color/white_F3F3F3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tv1A"
-        app:layout_constraintStart_toEndOf="@+id/tvAnswer4"
+        app:layout_constraintStart_toEndOf="@+id/tvAnswer6"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv1A"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="6dp"
         android:background="@drawable/bg_game_answer"
         android:gravity="center"
         android:text="0"
         android:textColor="@color/black_000000"
-        android:textSize="14dp"
+        android:textSize="16dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/tvA"
         app:layout_constraintTop_toTopOf="@+id/tvA" />
 
     <TextView
         android:id="@+id/tvA"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="6dp"
         android:background="@drawable/bg_game_answer"
         android:gravity="center"
         android:text="A"
         android:textColor="@color/green_A9CD76"
-        android:textSize="14dp"
+        android:textSize="16dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/tv2B"
         app:layout_constraintTop_toTopOf="@+id/tv2B" />
 
     <TextView
         android:id="@+id/tv2B"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="6dp"
         android:background="@drawable/bg_game_answer"
         android:gravity="center"
         android:text="0"
         android:textColor="@color/black_000000"
-        android:textSize="14dp"
+        android:textSize="16dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/tvB"
         app:layout_constraintTop_toTopOf="@+id/tvB" />
 
     <TextView
         android:id="@+id/tvB"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="6dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/bg_game_answer"
         android:gravity="center"
         android:text="B"
         android:textColor="@color/orange_D1775D"
-        android:textSize="14dp"
+        android:textSize="16dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -143,7 +175,7 @@
         android:id="@+id/gpResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="visible"
+        android:visibility="gone"
         app:constraint_referenced_ids="tv1A, tvA, tv2B, tvB, view7"
         tools:visibility="visible" />
 
