--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -101,6 +101,7 @@
     <color name="blue_8CCEFF">#8CCEFF</color>
     <color name="blue_DDF0FF">#DDF0FF</color>
     <color name="blue_85C9D1">#85C9D1</color>
+    <color name="blue_59ABB5">#59ABB5</color>
     <color name="blue_39ADBA">#39ADBA</color>
 
     <!--  Yellow  -->
