--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,4 +14,9 @@
         <!-- 陰影 -->
         <item name="android:windowContentOverlay">@null</item>
     </style>
+
+    <style name="dialog_style_zoom" parent="android:Animation">
+        <item name="android:windowEnterAnimation">@anim/dialog_zoom_enter</item>
+        <item name="android:windowExitAnimation">@anim/dialog_zoom_exit</item>
+    </style>
 </resources>
