--- a/app/src/main/res/drawable/rp_rectangle_f2f1b948_20_right.xml
+++ b/app/src/main/res/drawable/rp_rectangle_f2f1b948_20_right.xml
@@ -3,7 +3,9 @@ android:color="@color/orange_E58200">
 <item android:id="@android:id/mask">
     <shape android:shape="rectangle">
         <solid android:color="#000000" />
-        <corners android:radius="20dp" />
+        <corners
+            android:bottomRightRadius="20dp"
+            android:topRightRadius="20dp"/>
     </shape>
 </item>
 <item android:id="@android:id/background" >
