feat: add viewpage2 and game select fragment
- 新增遊戲模式選擇畫面
- 新增 viewpager2 及其效果

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -24,4 +24,14 @@
         <item name="android:windowMinWidthMajor">100%</item>
         <item name="android:windowMinWidthMinor">100%</item>
     </style>
+
+    <style name="RippleButton">
+        <item name="android:theme">@style/SelectableItemThemeColor</item>
+        <item name="android:background">?android:attr/selectableItemBackgroundBorderless</item>
+    </style>
+
+    <style name="SelectableItemThemeColor">
+        <item name="colorControlHighlight">#44000000</item>
+    </style>
+
 </resources>
