--- a/app/src/main/res/drawable/rp_clear.xml
+++ b/app/src/main/res/drawable/rp_clear.xml
@@ -1,5 +1,5 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/orange_FF8700">
+    android:color="@color/orange_FFE6CF">
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
             <solid android:color="#000000" />
