--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -21,8 +21,12 @@
             android:layout_height="wrap_content"
             android:text="1A2B"
             android:textColor="@color/blue_406682"
-            android:textSize="20dp"
+            android:textSize="18dp"
             android:textStyle="bold"
+            android:shadowColor="@color/white_FFFFFF"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:shadowRadius="2"
             app:layout_constraintBottom_toTopOf="@+id/view6"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -32,8 +36,8 @@
             android:id="@+id/imgLeave"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp"
             app:layout_constraintBottom_toTopOf="@+id/view6"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -47,6 +51,23 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/tvStep"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="12dp"
+            android:text="Step 1"
+            android:textColor="@color/yellow_FFE8BA"
+            android:shadowColor="@color/orange_5B5B5B"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:shadowRadius="2"
+            android:textSize="18dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ListView
@@ -73,13 +94,13 @@
             android:layout_width="55dp"
             android:layout_height="55dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="12dp"
             android:background="@drawable/rp_button"
             android:gravity="center"
-            android:text="1"
             android:tag="1"
+            android:text="1"
             android:textColor="@color/white_FFFFFF"
-            android:textSize="16dp"
+            android:textSize="12dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/tv2"
             app:layout_constraintHorizontal_bias="0.5"
@@ -92,10 +113,10 @@
             android:layout_height="55dp"
             android:background="@drawable/rp_button"
             android:gravity="center"
-            android:text="2"
             android:tag="2"
+            android:text="2"
             android:textColor="@color/white_FFFFFF"
-            android:textSize="16dp"
+            android:textSize="12dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/tv1"
             app:layout_constraintEnd_toStartOf="@+id/tv3"
@@ -109,10 +130,10 @@
             android:layout_height="55dp"
             android:background="@drawable/rp_button"
             android:gravity="center"
-            android:text="3"
             android:tag="3"
+            android:text="3"
             android:textColor="@color/white_FFFFFF"
-            android:textSize="16dp"
+            android:textSize="12dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/tv2"
             app:layout_constraintEnd_toStartOf="@+id/tv4"
@@ -126,10 +147,10 @@
             android:layout_height="55dp"
             android:background="@drawable/rp_button"
             android:gravity="center"
-            android:text="4"
             android:tag="4"
+            android:text="4"
             android:textColor="@color/white_FFFFFF"
-            android:textSize="16dp"
+            android:textSize="12dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/tv3"
             app:layout_constraintEnd_toStartOf="@+id/tv5"
@@ -144,10 +165,10 @@
             android:layout_marginEnd="8dp"
             android:background="@drawable/rp_button"
             android:gravity="center"
-            android:text="5"
             android:tag="5"
+            android:text="5"
             android:textColor="@color/white_FFFFFF"
-            android:textSize="16dp"
+            android:textSize="12dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/tv4"
             app:layout_constraintEnd_toEndOf="parent"
@@ -163,10 +184,10 @@
             android:layout_marginTop="12dp"
             android:background="@drawable/rp_button"
             android:gravity="center"
-            android:text="6"
             android:tag="6"
+            android:text="6"
             android:textColor="@color/white_FFFFFF"
-            android:textSize="16dp"
+            android:textSize="12dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/tv2"
             app:layout_constraintHorizontal_bias="0.5"
@@ -179,10 +200,10 @@
             android:layout_height="55dp"
             android:background="@drawable/rp_button"
             android:gravity="center"
-            android:text="7"
             android:tag="7"
+            android:text="7"
             android:textColor="@color/white_FFFFFF"
-            android:textSize="16dp"
+            android:textSize="12dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/tv6"
             app:layout_constraintEnd_toStartOf="@+id/tv3"
@@ -196,10 +217,10 @@
             android:layout_height="55dp"
             android:background="@drawable/rp_button"
             android:gravity="center"
-            android:text="8"
             android:tag="8"
+            android:text="8"
             android:textColor="@color/white_FFFFFF"
-            android:textSize="16dp"
+            android:textSize="12dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/tv7"
             app:layout_constraintEnd_toStartOf="@+id/tv4"
@@ -213,10 +234,10 @@
             android:layout_height="55dp"
             android:background="@drawable/rp_button"
             android:gravity="center"
-            android:text="9"
             android:tag="9"
+            android:text="9"
             android:textColor="@color/white_FFFFFF"
-            android:textSize="16dp"
+            android:textSize="12dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/tv8"
             app:layout_constraintEnd_toStartOf="@+id/tv5"
@@ -231,10 +252,10 @@
             android:layout_marginEnd="8dp"
             android:background="@drawable/rp_button"
             android:gravity="center"
-            android:text="0"
             android:tag="0"
+            android:text="0"
             android:textColor="@color/white_FFFFFF"
-            android:textSize="16dp"
+            android:textSize="12dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/tv9"
             app:layout_constraintEnd_toEndOf="parent"
@@ -244,42 +265,70 @@
 
         <TextView
             android:id="@+id/tvClear"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
             android:background="@drawable/rp_clear"
             android:gravity="center"
-            android:paddingStart="42dp"
+            android:paddingStart="12dp"
             android:paddingTop="8dp"
-            android:paddingEnd="42dp"
+            android:paddingEnd="12dp"
             android:paddingBottom="8dp"
             android:text="清除"
             android:textColor="@color/white_FFFFFF"
-            android:textSize="20dp"
+            android:textSize="18dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/tvBack"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="@+id/tv6"
             app:layout_constraintTop_toBottomOf="@+id/tv6" />
 
         <TextView
-            android:id="@+id/tvConfirm"
-            android:layout_width="wrap_content"
+            android:id="@+id/tvBack"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="12dp"
+            android:background="@drawable/rp_back"
+            android:gravity="center"
+            android:paddingStart="12dp"
+            android:paddingTop="8dp"
+            android:paddingEnd="12dp"
+            android:paddingBottom="8dp"
+            android:text="倒退"
+            android:textColor="@color/white_FFFFFF"
+            android:textSize="18dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/tvConfirm"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/tvClear"
+            app:layout_constraintTop_toBottomOf="@+id/tv6" />
+
+        <TextView
+            android:id="@+id/tvConfirm"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
             android:background="@drawable/rp_confirm"
             android:gravity="center"
-            android:paddingStart="42dp"
+            android:paddingStart="12dp"
             android:paddingTop="8dp"
-            android:paddingEnd="42dp"
+            android:paddingEnd="12dp"
             android:paddingBottom="8dp"
             android:text="確認"
             android:textColor="@color/white_FFFFFF"
-            android:textSize="20dp"
+            android:textSize="18dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/tv0"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/tvBack"
             app:layout_constraintTop_toBottomOf="@+id/tv6" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
