--- a/app/src/main/res/navigation/my_nav_graph.xml
+++ b/app/src/main/res/navigation/my_nav_graph.xml
@@ -9,11 +9,23 @@
         android:name="com.example.wordle_1A2B.ui.component.fragment.homepage.HomePageFragment"
         android:label="HomePageFragment" >
         <action
-            android:id="@+id/action_homePageFragment_to_gameFragment"
-            app:destination="@id/gameFragment" />
+            android:id="@+id/action_homePageFragment_to_gameModeSelectFragment"
+            app:destination="@id/gameModeSelectFragment" />
     </fragment>
     <fragment
         android:id="@+id/gameFragment"
-        android:name="com.example.wordle_1A2B.ui.component.fragment.game.GameFragment"
-        android:label="GameFragment" />
+        android:name="com.example.wordle_1A2B.ui.component.fragment.game.game.GameFragment"
+        android:label="GameFragment" >
+        <action
+            android:id="@+id/action_gameFragment_to_homePageFragment"
+            app:destination="@id/homePageFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/gameModeSelectFragment"
+        android:name="com.example.wordle_1A2B.ui.component.fragment.game.game_mode_select.GameModeSelectFragment"
+        android:label="GameModeSelectFragment" >
+        <action
+            android:id="@+id/action_gameModeSelectFragment_to_gameFragment"
+            app:destination="@id/gameFragment" />
+    </fragment>
 </navigation>
