--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,4 +15,14 @@
         <!-- 陰影 -->
         <item name="android:windowContentOverlay">@null</item>
     </style>
+
+    <style name="RippleButton">
+        <item name="android:theme">@style/SelectableItemThemeColor</item>
+        <item name="android:background">?android:attr/selectableItemBackgroundBorderless</item>
+    </style>
+
+    <style name="SelectableItemThemeColor">
+        <item name="colorControlHighlight">#44000000</item>
+    </style>
+
 </resources>
