feat: add all game mode feature
- 親增所有遊戲模式功能

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -76,6 +76,7 @@
     <color name="green_1CBF47">#1CBF47</color>
     <color name="green_79FF9C">#79FF9C</color>
     <color name="green_A9CD76">#A9CD76</color>
+    <color name="green_618C55">#618C55</color>
 
     <!--  Blue  -->
     <color name="blue_4A8FE1">#4A8FE1</color>
@@ -112,6 +113,7 @@
     <color name="yellow_FFF7D8">#FFF7D8</color>
     <color name="yellow_FFD175">#FFD175</color>
     <color name="yellow_FFC95C">#FFC95C</color>
+    <color name="yellow_B1A04C">#B1A04C</color>
     <color name="yellow_EFD37D_90">#F2EFD37D</color>
     <color name="yellow_F1B948_90">#F2F1B948</color>
 
