--- a/app/src/main/res/layout/fragment_game_mode_select.xml
+++ b/app/src/main/res/layout/fragment_game_mode_select.xml
@@ -65,41 +65,39 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout22">
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <TextView
                 android:id="@+id/tvCoin"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                android:layout_marginStart="8dp"
-                android:background="@drawable/bg_rectangle_white_15"
-                android:ellipsize="end"
+                android:layout_marginStart="17.5dp"
+                android:layout_marginEnd="16dp"
+                android:background="@drawable/bg_coin_background"
                 android:gravity="center"
                 android:paddingStart="36dp"
-                android:paddingEnd="24dp"
-                android:singleLine="true"
-                android:text="12345679"
-                android:textColor="@color/black_000000"
-                android:textSize="@dimen/text_smaller"
+                android:paddingTop="4dp"
+                android:paddingEnd="36dp"
+                android:paddingBottom="4dp"
+                android:text="0"
+                android:textColor="@color/white_FFFFFF"
+                android:textSize="20dp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView56"
+                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintHorizontal_chainStyle="packed"
-                app:layout_constraintStart_toStartOf="@+id/imageView56"
-                app:layout_constraintTop_toTopOf="@+id/imageView56"
-                app:layout_constraintVertical_bias="1.0"
-                app:layout_constraintWidth_percent=".25" />
+                app:layout_constraintStart_toStartOf="@+id/imageView"
+                app:layout_constraintTop_toTopOf="@+id/imageView" />
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/imageView56"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/game_coin" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.viewpager2.widget.ViewPager2
