--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -107,7 +107,7 @@
         android:id="@+id/cl4Words"
         android:layout_width="0dp"
         android:layout_height="75dp"
-        android:background="@drawable/rp_rectangle_f2efd37d_20"
+        android:background="@drawable/button_choose"
         app:layout_constraintBottom_toTopOf="@+id/cl5Words"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -116,23 +116,6 @@
         app:layout_constraintVertical_bias="0.19999999"
         app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintWidth_percent=".7">
-
-        <TextView
-            android:id="@+id/tv4WordStatus"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/rp_rectangle_f2f1b948_20_right"
-            android:gravity="center"
-            android:paddingStart="4dp"
-            android:paddingEnd="4dp"
-            android:text="Unlock"
-            android:textColor="@color/white_FFFFFF"
-            android:textSize="20dp"
-
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintWidth_percent=".3" />
 
         <TextView
             android:id="@+id/textView11"
@@ -146,7 +129,7 @@
             android:textColor="@color/white_FFFFFF"
             android:textSize="32dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/tv4WordStatus"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -156,30 +139,13 @@
         android:layout_width="0dp"
         android:layout_height="75dp"
         android:layout_marginTop="24dp"
-        android:background="@drawable/rp_rectangle_d85c5c5c_20"
+        android:background="@drawable/button_choose"
         app:layout_constraintBottom_toTopOf="@+id/cl6Words"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cl4Words"
         app:layout_constraintWidth_percent=".7">
-
-        <TextView
-            android:id="@+id/tv5WordStatus"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/rp_rectangle_d83e3a34_20_right"
-            android:gravity="center"
-            android:paddingStart="4dp"
-            android:paddingEnd="4dp"
-            android:text="Lock"
-            android:textColor="@color/white_FFFFFF"
-            android:textSize="20dp"
-
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintWidth_percent=".3" />
 
         <TextView
             android:id="@+id/textView12"
@@ -193,7 +159,7 @@
             android:textColor="@color/white_FFFFFF"
             android:textSize="32dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/tv5WordStatus"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -204,30 +170,13 @@
         android:layout_width="0dp"
         android:layout_height="75dp"
         android:layout_marginTop="24dp"
-        android:background="@drawable/rp_rectangle_d85c5c5c_20"
+        android:background="@drawable/button_choose"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cl5Words"
         app:layout_constraintWidth_percent=".7">
-
-        <TextView
-            android:id="@+id/tv6WordStatus"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/rp_rectangle_d83e3a34_20_right"
-            android:gravity="center"
-            android:paddingStart="4dp"
-            android:paddingEnd="4dp"
-            android:text="Lock"
-            android:textColor="@color/white_FFFFFF"
-            android:textSize="20dp"
-
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintWidth_percent=".3" />
 
         <TextView
             android:id="@+id/textView13"
@@ -241,7 +190,7 @@
             android:textColor="@color/white_FFFFFF"
             android:textSize="32dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/tv6WordStatus"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
