--- a/app/src/main/res/navigation/my_nav_graph.xml
+++ b/app/src/main/res/navigation/my_nav_graph.xml
@@ -10,7 +10,11 @@
         android:label="HomePageFragment" >
         <action
             android:id="@+id/action_homePageFragment_to_gameModeSelectFragment"
-            app:destination="@id/gameModeSelectFragment" />
+            app:destination="@id/gameModeSelectFragment"
+            app:enterAnim="@android:anim/fade_in"
+            app:exitAnim="@android:anim/fade_out"
+            app:popEnterAnim="@android:anim/fade_in"
+            app:popExitAnim="@android:anim/fade_out"/>
     </fragment>
     <fragment
         android:id="@+id/gameFragment"
@@ -18,7 +22,11 @@
         android:label="GameFragment" >
         <action
             android:id="@+id/action_gameFragment_to_homePageFragment"
-            app:destination="@id/homePageFragment" />
+            app:destination="@id/homePageFragment"
+            app:enterAnim="@android:anim/fade_in"
+            app:exitAnim="@android:anim/fade_out"
+            app:popEnterAnim="@android:anim/fade_in"
+            app:popExitAnim="@android:anim/fade_out"/>
     </fragment>
     <fragment
         android:id="@+id/gameModeSelectFragment"
@@ -26,6 +34,10 @@
         android:label="GameModeSelectFragment" >
         <action
             android:id="@+id/action_gameModeSelectFragment_to_gameFragment"
-            app:destination="@id/gameFragment" />
+            app:destination="@id/gameFragment"
+            app:enterAnim="@android:anim/fade_in"
+            app:exitAnim="@android:anim/fade_out"
+            app:popEnterAnim="@android:anim/fade_in"
+            app:popExitAnim="@android:anim/fade_out"/>
     </fragment>
 </navigation>
