feat: fix some bug
- 修正提示跑版
- 提示大小自適應
- 提示新增判斷金幣數量
- 修正 Navigation 返回問題

--- a/app/src/main/res/layout/dialog_game_hint.xml
+++ b/app/src/main/res/layout/dialog_game_hint.xml
@@ -49,18 +49,24 @@
 
         <TextView
             android:id="@+id/tvAnswer1"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="6dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintHeight_max="40dp"
+            app:layout_constraintWidth_max="40dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="32dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginBottom="32dp"
             android:background="@drawable/bg_game_answer"
             android:gravity="center"
+            android:maxWidth="40dp"
+            android:maxHeight="40dp"
             android:tag="1"
             android:textColor="@color/black_000000"
             android:textSize="16dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toStartOf="@+id/tvAnswer2"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -68,15 +74,19 @@
 
         <TextView
             android:id="@+id/tvAnswer2"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintHeight_max="40dp"
+            app:layout_constraintWidth_max="40dp"
             android:layout_marginStart="6dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/bg_game_answer"
             android:gravity="center"
             android:tag="2"
             android:textColor="@color/black_000000"
             android:textSize="16dp"
             android:textStyle="bold"
+            app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toStartOf="@+id/tvAnswer3"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/tvAnswer1"
@@ -84,15 +94,19 @@
 
         <TextView
             android:id="@+id/tvAnswer3"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_marginStart="6dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintHeight_max="40dp"
+            app:layout_constraintWidth_max="40dp"
             android:background="@drawable/bg_game_answer"
             android:gravity="center"
             android:tag="3"
             android:textColor="@color/black_000000"
             android:textSize="16dp"
             android:textStyle="bold"
+            app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toStartOf="@+id/tvAnswer4"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/tvAnswer2"
@@ -100,15 +114,19 @@
 
         <TextView
             android:id="@+id/tvAnswer4"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintHeight_max="40dp"
+            app:layout_constraintWidth_max="40dp"
             android:layout_marginStart="6dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/bg_game_answer"
             android:gravity="center"
             android:tag="4"
             android:textColor="@color/black_000000"
             android:textSize="16dp"
             android:textStyle="bold"
+            app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toStartOf="@+id/tvAnswer5"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/tvAnswer3"
@@ -116,9 +134,12 @@
 
         <TextView
             android:id="@+id/tvAnswer5"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintHeight_max="40dp"
+            app:layout_constraintWidth_max="40dp"
             android:layout_marginStart="6dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/bg_game_answer"
             android:gravity="center"
             android:tag="5"
@@ -126,6 +147,7 @@
             android:textSize="16dp"
             android:textStyle="bold"
             android:visibility="gone"
+            app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toStartOf="@+id/tvAnswer6"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/tvAnswer4"
@@ -134,9 +156,12 @@
 
         <TextView
             android:id="@+id/tvAnswer6"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintHeight_max="40dp"
+            app:layout_constraintWidth_max="40dp"
             android:layout_marginStart="6dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/bg_game_answer"
             android:gravity="center"
             android:tag="6"
@@ -144,6 +169,7 @@
             android:textSize="16dp"
             android:textStyle="bold"
             android:visibility="gone"
+            app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/tvAnswer5"
